tests/error/subtractInteger-bool-wrong-1st-argument.uplc
(program 1.0.0[[(builtin subtractInteger)(con bool True)](con integer 10)])